--- a/Canteen.Application/Canteen.Application.csproj
+++ b/Canteen.Application/Canteen.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <Folder Include="DomainModels\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
